working on safari overflow bug

--- a/scss/layout/aside.scss
+++ b/scss/layout/aside.scss
@@ -3,7 +3,7 @@
 aside {
     position: fixed;
     z-index: $aside-z-index;
-    top: 0;
+    bottom: 0;
     height: 100vh;
     width: 100%;
     max-width: $aside-width;
