--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -9,7 +9,7 @@
 html,
 body {
     height: 100%;
-    /*-webkit-overflow-scrolling: touch;*/
+    -webkit-overflow-scrolling: touch;
 }
 
 html {
